# cgv

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  VR.html  a00002.html  a00004.html  a00006.html  a00008.html  a00010.html  a00011.html  a00011.js  a00012.html  a00012.js  a00013.html  a00013.js  a00014.html  a00014.js  a00015.html  a00015.js  a00016.html  a00016.js  a00017.html  a00017.js  a00018.html  a00018.js  a00019.html  a00019.js  a00020.html  a00020.js  a00021.html  a00021.js  a00022.html  a00022.js  a00023.html  a00023.js  a00024.html  (+6773 more)
3rd/: CMakeLists.txt  cgv-3rd-config.cmake
3rd/ANN/: ANN.h  CMakeLists.txt  Copyright_1.1.2.txt  ann.pj  annf.pj  kd_dump.cpp  kd_split.cpp  kd_util.cpp
3rd/JoltPhysics/: jolt_physics.pj  todo_CMakeLists_todo.txt
3rd/cgv-tcnn-wrapper/: cgv-tcnn.pj
3rd/cpp-httplib/: httplib.h  httplib.pj
3rd/fltk/: CMakeLists.txt  FLTKConfig.cmake  README  fltk.pj
3rd/glew/: CMakeLists.txt  glew.pj
3rd/glfw/: glfw.pj
3rd/googletest/: CMakeLists.txt
3rd/jpeg/: CMakeLists.txt  jconfig.gcc  jconfig.h  jconfig.mingw  jmorecfg.h  jpeg.pj
3rd/json/: CMakeLists.txt  json.pj
3rd/libtorch/: .gitignore  CMakeLists.txt  get_prebuilt.ps1  libtorch.pj
3rd/maptiles/: maptiles.pj  utils.h
3rd/openal-soft/: CMakeLists.txt  config.h  openal-alc.pj  openal-alcfx.pj  openal-common.pj  openal-soft.pj  rename_duplicates.bat  sparse_checkout.bat  undo_rename_duplicates.bat  version.h
3rd/openvr/: CMakeLists.txt  openvr.pj
3rd/png/: CMakeLists.txt  png.pj
3rd/pthread/: CMakeLists.txt  COPYING_LIB.txt  implement.h  pthread.pj
3rd/screen_capture_lite/: CMakeLists.txt  screen_capture_lite.pj
3rd/sndfile/: CMakeLists.txt  config.h  dummy_opus_and_flac.c  sndfile-g72x.pj  sndfile.pj  sparse_checkout.bat
3rd/tiff/: CMakeLists.txt  tif_config.h  tif_config.unix.h  tif_config.vc.h  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_jbig.c  tif_os.c  tif_win32.c  tiff.pj  tiffconf.h  tiffconf.unix.h  tiffconf.vc.h  tiffconf.wince.h
3rd/tinyxml/: CMakeLists.txt  tinyxml.pj
3rd/webserver/: CMakeLists.txt  Tracer.h  UrlHelper.cpp  UrlHelper.h  base64.cpp  stdHelpers.cpp  stdHelpers.h  webserver.cpp  webserver.h  webserver.pj
3rd/xml/: CMakeLists.txt  xml.pj
3rd/zlib/: CMakeLists.txt  zlib.pj
apps/cgv_viewer/: CMakeLists.txt  cgv.xcf  cgv_viewer.pj  cgv_viewerMacros.cmake  icon256.xcf  main.cxx  main.h  resource.h  resource.rc
apps/server_host/: CMakeLists.txt  main.c
apps/service_host/: CMakeLists.txt  main.c  main.cxx
cgv/: CMakeLists.txt  cgv-config.cmake  cgv.pj  cgv_ph.h
cgv/base/: CMakeLists.txt  action.cxx  action.h  attach_slot.cxx  attach_slot.h  base.cxx  base.h  base_generator.cxx  base_generator.h  call_interface_impl.h  call_interface_impl.ph  cgv_base.pj  console.cxx  console.h  find_action.h  group.cxx  group.h  import.cxx  import.h  lib_begin.h  named.cxx  named.h  node.cxx  node.h  register.cxx  register.h  traverser.cxx  traverser.h
cgv/config/: CMakeLists.txt  config.ppp  cpp_version.h  lib_begin.h  lib_end.h  make.ppp  ppp.ppp
cgv/data/: CMakeLists.txt  ascii_io_reflection_handlers.cxx  ascii_io_reflection_handlers.h  binary_io_reflection_handlers.cxx  binary_io_reflection_handlers.h  cgv_data.pj  component_format.cxx  component_format.h  data_format.cxx  data_format.h  data_view.cxx  data_view.h  dynamic_priority_queue.h  grid.h  image_view.cxx  image_view.h  informed_ptr.h  interval_map.h  io_reflection_handler.cxx  io_reflection_handler.h  lib_begin.h  object_registry.h  optional.h  packing_info.cxx  packing_info.h  quadtree.h  ref_arr.h  ref_counted.h  ref_ptr.h  time_stamp.h  union_find.h
cgv/defines/: CMakeLists.txt  assert.h  deprecated.h  join.h  quote.h
cgv/gui/: CMakeLists.txt  animate.cxx  animate.h  application.cxx  application.h  base_provider.cxx  base_provider.h  base_provider_generator.cxx  base_provider_generator.h  button.cxx  button.h  cgv_gui.pj  choice_event.cxx  choice_event.h  config_file.cxx  control.cxx  control.h  dialog.cxx  dialog.h  directory_helper.h  event.cxx  event.h  event_handler.cxx  event_handler.h  file_dialog.cxx  file_dialog.h  file_helper.h  fvec_gui.cxx  gui_creator.cxx  gui_creator.h  gui_driver.cxx  gui_driver.h  gui_group.cxx  gui_group.h  help_menu_entry.cxx  help_menu_entry.h  help_message.h  key_control.cxx  key_control.h  key_event.cxx  (+39 more)
cgv/math/: CMakeLists.txt  adjacency_list.h  align.h  bezier.h  bezier_tube.h  bi_polynomial.h  bresenham.h  bucket_sort.h  camera.h  cgv_math.pj  chol.h  color_operations.h  compare_float.h  constants.h  convert_curve.h  cubic_bezier.h  cubic_hermite.h  cubic_hermite_tube.h  det.h  diag_mat.h  distance.h  distance_transform.h  eig.h  fibo_heap.h  fmat.h  fray.h  ftransform.h  functions.cxx  functions.h  fvec.h  gaussj.h  geo_transform.cxx  geo_transform.h  geom.h  hermite.h  hermite_tube.h  integer.h  interpolate.h  interpolator.h  intersection.h  (+51 more)
cgv/media/: CMakeLists.txt  axis_aligned_box.h  cgv_media.pj  color.h  color_model.h  color_model.hh  color_scale.cxx  color_scale.h  color_scheme.cxx  color_scheme.h  color_schemes.cxx  color_storage.cxx  color_storage.h  colored_model.cxx  colored_model.h  colors.h  lib_begin.h  named_color_schemes.cxx  named_color_schemes.h  named_colors.h  plane.h  ray.h  riff.cxx  riff.h  sequential_scale.h  sphere.h  ticks.cxx  ticks.h  transfer_function.cxx  transfer_function.h
cgv/os/: CMakeLists.txt  cgv_os.pj  clipboard.cxx  clipboard.h  cmdline_tools.cxx  cmdline_tools.h  common_std_thread.h  display.cxx  display.h  http_request.h  lib_begin.h  line_break.cxx  line_break.h  mouse_ctrl.cxx  mouse_ctrl.h  (+22 more)
doc/: 01_overview.doc  02_install.doc  03_type.doc  04_base.doc  04_signals.doc  05_gui.doc  08_ppp.doc  09_vr.doc  CMakeLists.txt  base.dox  cgv.dox  doc.pj  gui_18_12_08.ppt
libs/: CMakeLists.txt  cgv-libs-config.cmake
plugins/: CMakeLists.txt
test/: CMakeLists.txt  lib_begin.h
tool/: CMakeLists.txt  cgv_target_creation.cmake  create_lib.cmake  run_examples.bat  run_examples.sh  set_ide_params.cmake  set_plugin_execution_params.cmake
(+3804 files in other folders)
