# TODO old-style targets are temporarily decorated with the CGV-defined type property, remove when
# converting them to the new system
add_subdirectory(ann)
set_target_properties(ann PROPERTIES CGVPROP_TYPE "library")
set_target_properties(annf PROPERTIES CGVPROP_TYPE "library")
add_subdirectory(fltk)
set_target_properties(fltk PROPERTIES CGVPROP_TYPE "library")
add_subdirectory(glew)
set_target_properties(glew PROPERTIES CGVPROP_TYPE "library")
add_subdirectory(googletest)
#set_target_properties(googletest PROPERTIES CGVPROP_TYPE "library")
add_subdirectory(jpeg)
set_target_properties(jpeg PROPERTIES CGVPROP_TYPE "library")
add_subdirectory(json)
set_target_properties(json PROPERTIES CGVPROP_TYPE "library")
add_subdirectory(libtorch)
#set_target_properties(libtorch PROPERTIES CGVPROP_TYPE "library")
add_subdirectory(openvr)
set_target_properties(openvr PROPERTIES CGVPROP_TYPE "library")
add_subdirectory(png)
set_target_properties(png PROPERTIES CGVPROP_TYPE "library")
add_subdirectory(tiff)
set_target_properties(tif PROPERTIES CGVPROP_TYPE "library")
add_subdirectory(zlib)
set_target_properties(zlib PROPERTIES CGVPROP_TYPE "library")
add_subdirectory(screen_capture_lite)
set_target_properties(screen_capture_lite PROPERTIES CGVPROP_TYPE "library")
if(CGV_BUILD_WITH_AUDIO)
	add_subdirectory(openal-soft)
	#set_target_properties(openal PROPERTIES CGVPROP_TYPE "library")
	add_subdirectory(sndfile)
	#set_target_properties(sndfile PROPERTIES CGVPROP_TYPE "library")
endif()

if(WIN32)
	# FIXME webserver can only be built on Windows
	add_subdirectory(webserver)
	set_target_properties(webserver PROPERTIES CGVPROP_TYPE "library")
endif()

install(EXPORT cgv_3rd DESTINATION ${CGV_BIN_DEST})
