
add_subdirectory(cgv_reflect_types)
add_subdirectory(ann_wrapper)
add_subdirectory(cg_gamepad)
add_subdirectory(cgv_proc)
add_subdirectory(cg_vr)
add_subdirectory(cgv_app)
add_subdirectory(cg_nui)
add_subdirectory(cgv_gl)
add_subdirectory(cgv_g2d)
add_subdirectory(cgv_gpgpu)
add_subdirectory(cgv_post)
add_subdirectory(delaunay)
add_subdirectory(gamepad)
add_subdirectory(glsu)
add_subdirectory(holo_disp)
add_subdirectory(plot)
add_subdirectory(rect_pack)
add_subdirectory(tt_gl_font)
add_subdirectory(stream_vis)
add_subdirectory(vr)
if(CGV_BUILD_WITH_AUDIO)
	add_subdirectory(cgv_oal)
endif()

install(EXPORT cgv_libs DESTINATION ${CGV_BIN_DEST})
install(DIRECTORY . DESTINATION ${CGV_LIBS_INCLUDE_DEST} FILES_MATCHING PATTERN "*.h")
# TODO find out why there are *.hh files (maybe rename them to *.h)
install(DIRECTORY . DESTINATION ${CGV_LIBS_INCLUDE_DEST} FILES_MATCHING PATTERN "*.hh")
